{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 20,
  "lineage": "7b4ece7e-0619-e4e7-adae-1297b9425996",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d59782f89eca8be0",
            "domain": "vpc",
            "id": "eipalloc-0d59782f89eca8be0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-63-19.compute-1.amazonaws.com",
            "public_ip": "44.198.63.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway EIP"
            },
            "tags_all": {
              "Name": "nat_gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.school-site-igw",
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-pro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:585057119159:instance/i-0b2c17d4d9a2fc016",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2c17d4d9a2fc016",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea81ca9460fdc5f5",
            "private_dns": "ip-172-31-86-251.ec2.internal",
            "private_ip": "172.31.86.251",
            "public_dns": "ec2-18-205-105-58.compute-1.amazonaws.com",
            "public_ip": "18.205.105.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3dddc4a86da8faa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060433edd6f544a34",
            "tags": {
              "Name": "school-site",
              "owner": "kokou"
            },
            "tags_all": {
              "Name": "school-site",
              "owner": "kokou"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef5e5580cb6f6c94"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-pro1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:585057119159:instance/i-08a5e58a2c89a631d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a5e58a2c89a631d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c97fe6dafb8a146",
            "private_dns": "ip-172-31-83-192.ec2.internal",
            "private_ip": "172.31.83.192",
            "public_dns": "ec2-34-227-148-135.compute-1.amazonaws.com",
            "public_ip": "34.227.148.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01563934940a6a82d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060433edd6f544a34",
            "tags": {
              "Name": "school-site",
              "owner": "kokou"
            },
            "tags_all": {
              "Name": "school-site",
              "owner": "kokou"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef5e5580cb6f6c94"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "school-site-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:internet-gateway/igw-075224c4457ebe88e",
            "id": "igw-075224c4457ebe88e",
            "owner_id": "585057119159",
            "tags": {
              "Name": "school-site-igw"
            },
            "tags_all": {
              "Name": "school-site-igw"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d59782f89eca8be0",
            "connectivity_type": "public",
            "id": "nat-09e12a34fa9f3370b",
            "network_interface_id": "eni-04fcac1f566d24e56",
            "private_ip": "10.0.1.117",
            "public_ip": "44.198.63.19",
            "subnet_id": "subnet-0c9e0626f7d7949c5",
            "tags": {
              "Name": "school-site Nat gateway"
            },
            "tags_all": {
              "Name": "school-site Nat gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.school-site-igw",
            "aws_subnet.school-site-puSubnet1",
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "school-sitePrivateRtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:route-table/rtb-0e2ad0764d078babf",
            "id": "rtb-0e2ad0764d078babf",
            "owner_id": "585057119159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09e12a34fa9f3370b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "school-sitePrivateRtable"
            },
            "tags_all": {
              "Name": "school-sitePrivateRtable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.school-site-igw",
            "aws_nat_gateway.Nat",
            "aws_subnet.school-site-puSubnet1",
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "school-sitePubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:route-table/rtb-04cb78d29746b82a3",
            "id": "rtb-04cb78d29746b82a3",
            "owner_id": "585057119159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075224c4457ebe88e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.school-site-igw",
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c465336d4a81c68",
            "route_table_id": "rtb-0e2ad0764d078babf",
            "subnet_id": "subnet-019c37a1c5f664dd7"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.school-site-igw",
            "aws_nat_gateway.Nat",
            "aws_route_table.school-sitePrivateRtable",
            "aws_subnet.school-site-privateSubnet1",
            "aws_subnet.school-site-puSubnet1",
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da3c026b0f1b92d",
            "route_table_id": "rtb-04cb78d29746b82a3",
            "subnet_id": "subnet-0c9e0626f7d7949c5"
          },
          "dependencies": [
            "aws_internet_gateway.school-site-igw",
            "aws_route_table.school-sitePubrt",
            "aws_subnet.school-site-puSubnet1",
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:security-group/sg-035d6e7111d07a9e1",
            "description": "Allow tls inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035d6e7111d07a9e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "tls from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "585057119159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "school-site-privateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:subnet/subnet-019c37a1c5f664dd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019c37a1c5f664dd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585057119159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "school-site-privateSubnet1"
            },
            "tags_all": {
              "Name": "school-site-privateSubnet1"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "school-site-privateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:subnet/subnet-097904cd3fd7856d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097904cd3fd7856d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585057119159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "school-site-privateSubnet2"
            },
            "tags_all": {
              "Name": "school-site-privateSubnet2"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "school-site-privateSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:subnet/subnet-0bc32fafd04931df9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc32fafd04931df9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585057119159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "school-site-privateSubnet3"
            },
            "tags_all": {
              "Name": "school-site-privateSubnet3"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "school-site-privateSubnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:subnet/subnet-0f40ab6d83bdd21e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f40ab6d83bdd21e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585057119159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "school-site-privateSubnet3"
            },
            "tags_all": {
              "Name": "school-site-privateSubnet3"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "school-site-puSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:subnet/subnet-0c9e0626f7d7949c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e0626f7d7949c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585057119159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "school-site-puSubnet1"
            },
            "tags_all": {
              "Name": "school-site-puSubnet1"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "school-site-puSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:subnet/subnet-031550c9fc42bcaf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031550c9fc42bcaf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585057119159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "school-site-puSubnet2"
            },
            "tags_all": {
              "Name": "school-site-puSubnet2"
            },
            "vpc_id": "vpc-0d4dfd25639b401ec"
          },
          "dependencies": [
            "aws_vpc.school-site-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "school-site-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585057119159:vpc/vpc-0d4dfd25639b401ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0583b8901e31de56c",
            "default_route_table_id": "rtb-0987206ebe9cd1edc",
            "default_security_group_id": "sg-0709ba6daae9b7532",
            "dhcp_options_id": "dopt-0279725c002fc6f33",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d4dfd25639b401ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0987206ebe9cd1edc",
            "owner_id": "585057119159",
            "tags": {
              "Name": "school-site-vpc"
            },
            "tags_all": {
              "Name": "school-site-vpc"
            }
          }
        }
      ]
    }
  ]
}